# ledger

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  package.json  pyproject.toml
.github/workflows/: docs.yml  test.yml
api/: __main__.py  server.py
config/: accounts.yaml.example  categories.yaml.example  tax.yaml.example
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: adding-a-bank.md  api.md  business-splits.md  cli.md  config-accounts.md  config-categories.md  config-tax.md  dashboard.md  getting-started.md  index.mdx  ingestion.md  installation.md  source-of-truth.md
docs/src/styles/: custom.css
etl/: basiq.py  categorizer.py  cli.py  currency.py  db.py  models.py  normalizer.py  splitter.py  tagger.py
etl/parsers/: airbnb_csv.py  amex_csv.py  bankwest_csv.py  bankwest_pdf.py  base.py  coles_pdf.py  hsbc_pdf.py  ing_csv.py  ing_pdf.py  paypal_csv.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: api.ts  charts.ts  filters.ts  main.ts  spreadsheet.ts  style.css
scripts/: reingest.sh
tests/: conftest.py  test_accounts.py  test_ato.py  test_categorizer.py  test_normalizer.py  test_paypal_parser.py  test_source_of_truth.py  test_splitter.py  test_tagger.py
tests/fixtures/: accounts.yaml  categories.yaml  tax.yaml
